additional spinnaker docs